# gpd

./: CMakeLists.txt  CONTEXT.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: python-build.yml
include/gpd/util/: cloud.h
openspec/changes/archive/2026-06-26-add-python-bindings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-26-add-python-bindings/specs/python-bindings/: spec.md
openspec/specs/python-bindings/: spec.md
packaging/python/: CMakeLists.txt
packaging/python/python/gpd/core/: __init__.py
packaging/python/src/: core_ext.cpp
tests/python/: test_cloud.py  test_core_import.py  test_detector.py
