[build-system]
requires = [
  "scikit-build-core >=0.10",
  "nanobind >=1.3.2",
  "numpy >=1.23",
  "cmeel-eigen[build]",
  "patchelf; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[project]
name = "gpd"
version = "0.1.0"
description = "Python bindings for Grasp Pose Detection"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "GPD contributors" },
]
dependencies = [
  "numpy >=1.23",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = [
  "pytest >=7",
]

[tool.scikit-build]
cmake.source-dir = "packaging/python"
wheel.packages = []

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
USE_CAFFE = "OFF"
USE_OPENVINO = "OFF"
USE_OPENCV = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
